fixed pixel alignment issues on projects page

--- a/style.css
+++ b/style.css
@@ -296,42 +296,42 @@ h1 {
 #project-container {
   width: 70%;
   margin: 4% auto;
-  display: flex
 }
 
 
 #current-project {
   display: inline-block;
   background-image: url('./images/projects/climbr.png');
-  background-size: auto 110%;
+  background-size: auto 100%;
   background-repeat: no-repeat;
-  height: 650px;
-  width: 89%;
-  margin: 0 auto;
+  height: 600px;
+  width: 74%;
+}
+
+#project-lower-wrapper {
+  display: flex;
 }
 
 #project-description {
   background-color: rgba(0,0,0,0.7);
-  padding: 2%;
+  padding: 10px;
   color: white;
-  float: right;
   bottom: 0px;
-  width: 26%;
-  height: 94%;
+  width: 24%;
 }
 
 #project-nav {
-  width: 10%;
-  height: 650px;
+  width: 100%;
+  height: 100px;
   top: 0px;
-  display: inline-block;
+  display: flex;
+  justify-content: space-between;
 }
 
 .project-selector {
-  width: 90%;
-  min-width: 200px;
-  height: 145px;
-  margin: 0px auto 10px;
+  width: 24%;
+  height: 80px;
+  margin: 0px auto;
   padding-top: 10px;
   padding-left: 10px;
   background-color: #757575;
@@ -391,7 +391,6 @@ h1 {
 }
 
 
-
 .git-logo-bg:hover{
   background: linear-gradient(220deg, #DDFF00, #7BFF57);
   cursor: pointer;
@@ -430,7 +429,6 @@ h1 {
 }
 
 
-
 .white-github{
 
 }
@@ -439,10 +437,8 @@ h1 {
   color: #E0E0E0;
   text-align: center;
   font-size: 65px;
-  margin: 20px auto;
+  margin: 10px auto;
 }
-
-
 
 
 .contact{
